--- a/api/pom.xml
+++ b/api/pom.xml
@@ -50,7 +50,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-b180801.1052</version>
+    <version>2.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -68,7 +68,7 @@
         <connection>scm:git:git://github.com/javaee/jax-ws-spec.git</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>https://github.com/javaee/jax-ws-spec</url>
-      <tag>2.4.0-b180901.1240 </tag>
+      <tag>HEAD</tag>
   </scm>
 
     <licenses>
