integrate jaxb-api 2.3.1
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -139,7 +139,7 @@
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.4</spec.version>
         <old.spec.version>2.3</old.spec.version>
-        <jaxb.version>2.3.1-RC1</jaxb.version>
+        <jaxb.version>2.3.1</jaxb.version>
         <soap.version>1.4.0</soap.version>
 
         <non.final>false</non.final>
